# poop_garden_api

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
data_profiles/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
data_profiles/migrations/: 0001_initial.py
friends/: admin.py  models.py  serializers.py  urls.py  views.py
friends/migrations/: 0001_initial.py
poop_garden_api/: asgi.py  settings.py  urls.py  wsgi.py
poop_profiles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
poop_profiles/migrations/: 0001_initial.py  0002_friendlist.py  0003_delete_friendlist.py
